Changes Immutable List to Mutable List